--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,9 @@ function square() {
 </script>
 </head>
 <body>
+	<h1>
+		Marcelino L&oacute;pez Pastrana
+	</h1>
   Number:
   <input type="text" id="n1"><p>
 
